--- a/app/src/main/res/layout/film_list_item.xml
+++ b/app/src/main/res/layout/film_list_item.xml
@@ -7,7 +7,9 @@
     android:layout_gravity="center"
     app:cardCornerRadius="20dp"
     app:contentPadding="8dp"
-    android:elevation="10dp">
+    app:cardElevation="20dp"
+    android:layout_marginVertical="6dp"
+    android:layout_marginHorizontal="16dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="100dp">
